# header-language

./: .gitmodules  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
data_converter/: Cargo.toml
data_converter/src/: main.rs
src/: annotation.ts  command.ts  completion.ts  description.ts  diagnostics.ts  equipment.ts  extension.ts  flag.ts  icon.ts  interpolationCommand.ts  item.ts  line.ts  parseCommand.ts  parseIcon.ts  parseLine.ts  parsePickup.ts  parseUberState.ts  parser.ts  pickupFlag.ts  util.ts  zone.ts
src/assets/: abilityTypes.ts  abilityVariants.ts  bonusItemTypes.ts  bonusItemVariants.ts  bonusUpgradeTypes.ts  bonusUpgradeVariants.ts  equipVariants.ts  iconVariants.ts  namedUberStates.ts  progressMessageVariants.ts  relicTypes.ts  relicVariants.ts  resourceType.ts  resourceVariants.ts  shardTypes.ts  shardVariants.ts  statueVariants.ts  teleporterTypes.ts  teleporterVariants.ts  uberStates.ts
src/completion/: booleanCompletion.ts  commandCompletion.ts  iconTypeCompletion.ts  keybindCompletions.ts  messageFlagCompletion.ts  parameterTypeCompletion.ts  slotCompletion.ts  uberStateCompletion.ts  uberTypeCompletion.ts  waterCompletion.ts  wheelBindCompletion.ts
src/icon/: gromIcon.ts  lupoIcon.ts  opherIcon.ts  shardIcon.ts  spellIcon.ts  tuleyIcon.ts
src/item/: ability.ts  bonusItem.ts  bonusUpgrade.ts  message.ts  numericBoolean.ts  progressMessage.ts  relic.ts  resource.ts  setUberState.ts  (+10 more)
syntaxes/: ori-wotw-header.tmLanguage.json
wasm/: Cargo.toml
wasm/src/: describe.rs  helpers.rs  lib.rs  toArray.js
(+6 files in other folders)
