[package]
name = "data_converter"
version = "0.1.0"
authors = ["SiriusAshling <53594055+SiriusAshling@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
wotw_seedgen = "0.0.4"
